--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,9 +11,9 @@
 <body>
     <div class="container">
     <h1>URL Shortener</h1>
-    <form action="" method="POST" class="my-4 form-inline">
-        <label for="fullURL" class="sr-only">Url</label>
-        <input required placeholder="Url" type="url" name="fullURL" id="fullURL" class="form-control col mr-2"/>
+    <form action="/shortUrls" method="POST" class="my-4 form-inline">
+        <label for="fullUrl" class="sr-only">Url</label>
+        <input required placeholder="Url" type="url" name="fullUrl" id="fullUrl" class="form-control col mr-2"/>
         <button class="btn btn-success" type="submit">SUBMIT</button>
     </form>
     <table class="table table-striped table-responsive">
@@ -25,11 +25,13 @@
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td><a href="https://tedvu.com">https://tedvu.com</a></td>
-                <td><a href="/12345">123456</a></td>
-                <td>10</td>
-            </tr>
+            <% shortUrls.forEach(shortUrl =>{ %>
+                <tr>
+                    <td><a href="<%= shortUrl.full %>"><%= shortUrl.full %> </a></td>
+                    <td><a href="<%= shortUrl.short %>"><%= shortUrl.short %></a></td>
+                    <td><%= shortUrl.clicks %></td>
+                </tr>
+            <% }) %>
         </tbody>
     </table>
 </div>
