--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,30 +9,32 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
-    <h1>URL Shortener</h1>
+ <div class="container">
+    <h1>URL Shortener - Developed by Ted Vu </h1>
     <form action="/shortUrls" method="POST" class="my-4 form-inline">
         <label for="fullUrl" class="sr-only">Url</label>
         <input required placeholder="Url" type="url" name="fullUrl" id="fullUrl" class="form-control col mr-2"/>
         <button class="btn btn-success" type="submit">SUBMIT</button>
     </form>
-    <table class="table table-striped table-responsive">
-        <thead>
+    <div class="table-responsive-lg">
+    <table class="table table-bordered table-hover table-striped">
+        <thead class="thead-dark">
             <tr>
                 <th>Full Url</th>
+            
                 <th>Short Url</th>
+                
             </tr>
         </thead>
-        <tbody>
+        <tbody >
               <% shortUrls.forEach(shortUrl => { %>
-                <tr>
+                <tr >
                    <td><a href="<%= shortUrl.full %>" target="_blank"><%= shortUrl.full %></a></td>
                    <td><a href="<%= shortUrl.short %>" target="_blank"><%= shortUrl.short %></a></td>
                 </tr>
-
               <% }) %>
         </tbody>
     </table>
-</div>
+ </div>
 </body>
 </html>
